k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcriberapp
  namespace: transcriber
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: transcriberapp
  template:
    metadata:
      labels:
        app: transcriberapp
    spec:
      containers:
        - name: transcriberapp
          image: felixmurcia/transcriberapp:v20260209-2121
          ports:
            - containerPort: 9000

          command:
            - uvicorn
            - transcriber_app.web.web_app:app
            - --host
            - "0.0.0.0"
            - --port
            - "9000"
            - --ssl-keyfile
            - /certs/ubuntu.tail921051.ts.net.key
            - --ssl-certfile
            - /certs/ubuntu.tail921051.ts.net.crt

          volumeMounts:
            - name: audios
              mountPath: /app/audios
            - name: transcripts
              mountPath: /app/transcripts
            - name: outputs
              mountPath: /app/outputs
            - name: tailscale-certs
              mountPath: /certs
              readOnly: true

      volumes:
        - name: audios
          persistentVolumeClaim:
            claimName: transcriberapp-audios
        - name: transcripts
          persistentVolumeClaim:
            claimName: transcriberapp-transcripts
        - name: outputs
          persistentVolumeClaim:
            claimName: transcriberapp-outputs
        - name: tailscale-certs
          hostPath:
            path: /var/lib/tailscale/certs
            type: Directory
