k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transcriberapp
  namespace: transcriber
spec:
  type: NodePort
  selector:
    app: transcriberapp
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30090
